Bug 191577 - Plugin error (storage backend) and crash while trying to configure Akregator.
Summary: Plugin error (storage backend) and crash while trying to configure Akregator.
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-04 12:43 UTC by Bitta Jam
Modified: 2009-05-21 19:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bitta Jam 2009-05-04 12:43:04 UTC
Version:           1.4.2 (using 4.2.2 (KDE 4.2.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.28-11-generic

Dear All.

When I start Akregator (Kubuntu 9.04, KDE 4.2.2), it shows the message: "Unable to load storage backend plugin "". No feeds are archived."
So it can't save articles.

Then I try to set it up: Settings -> Configure -> Advanced.
And crush: The application Kontact (kontact) crashed and caused the signal 11 (SIGSEGV).

Application: Kontact (kontact), signal SIGSEGV
[Current thread is 0 (LWP 8577)]

Thread 3 (Thread 0xb10c3b90 (LWP 8578)):
#0  0xb80af430 in __kernel_vsyscall ()
#1  0xb5a0b7b1 in select () from /lib/tls/i686/cmov/libc.so.6
#2  0xb5cdf380 in QProcessManager::run (this=0x969ddd0) at io/qprocess_unix.cpp:305
#3  0xb5c0d96e in QThreadPrivate::start (arg=0x969ddd0) at thread/qthread_unix.cpp:189
#4  0xb52044ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#5  0xb5a1349e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xb06ffb90 (LWP 8582)):
#0  0xb80af430 in __kernel_vsyscall ()
#1  0xb5208412 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb5a22344 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb5c0e98c in QWaitCondition::wait (this=0x9d20448, mutex=0x9d20444, time=30000) at thread/qwaitcondition_unix.cpp:85
#4  0xb5c03e76 in QThreadPoolThread::run (this=0x9d20648) at concurrent/qthreadpool.cpp:140
#5  0xb5c0d96e in QThreadPrivate::start (arg=0x9d20648) at thread/qthread_unix.cpp:189
#6  0xb52044ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb5a1349e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb491e700 (LWP 8577)):
[KCrash Handler]
#6  0xb08238df in Akregator::SettingsAdvanced::selectFactory (this=0x9faa928, key=@0xbf8cc778) at /build/buildd/kdepim-4.2.2/akregator/configuration/settings_advanced.cpp:77
#7  0xb0820de7 in KCMAkregatorAdvancedConfig::load (this=0xa00fb90) at /build/buildd/kdepim-4.2.2/akregator/configuration/akregator_config_advanced.cpp:63
#8  0xb6eaea3b in KCModule::qt_metacall (this=0xa00fb90, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x9efc2c0) at /build/buildd/kde4libs-4.2.2/obj-i486-linux-gnu/kdeui/kcmodule.moc:78
#9  0xb0820c32 in KCMAkregatorAdvancedConfig::qt_metacall (this=0xa00fb90, _c=QMetaObject::InvokeMetaMethod, _id=29, _a=0x9efc2c0)
    at /build/buildd/kdepim-4.2.2/obj-i486-linux-gnu/akregator/configuration/akregator_config_advanced.moc:58
#10 0xb5d108fb in QMetaCallEvent::placeMetaCall (this=0xa017b88, object=0xa00fb90) at kernel/qobject.cpp:489
#11 0xb5d123a0 in QObject::event (this=0xa00fb90, e=0xa017b88) at kernel/qobject.cpp:1118
#12 0xb62294d0 in QWidget::event (this=0xa00fb90, event=0xa017b88) at kernel/qwidget.cpp:7913
#13 0xb61d2f2c in QApplicationPrivate::notify_helper (this=0x969c5c0, receiver=0xa00fb90, e=0xa017b88) at kernel/qapplication.cpp:4084
#14 0xb61db312 in QApplication::notify (this=0xbf8ccfb8, receiver=0xa00fb90, e=0xa017b88) at kernel/qapplication.cpp:4049
#15 0xb6df794d in KApplication::notify (this=0xbf8ccfb8, receiver=0xa00fb90, event=0xa017b88) at /build/buildd/kde4libs-4.2.2/kdeui/kernel/kapplication.cpp:307
#16 0xb5d01a3b in QCoreApplication::notifyInternal (this=0xbf8ccfb8, receiver=0xa00fb90, event=0xa017b88) at kernel/qcoreapplication.cpp:602
#17 0xb5d02695 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x967d428) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#18 0xb5d0288d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1132
#19 0xb5d2d7ef in postEventSourceDispatch (s=0x969ecb8) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#20 0xb4dd4b88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#21 0xb4dd80eb in ?? () from /usr/lib/libglib-2.0.so.0
#22 0xb4dd8268 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#23 0xb5d2d438 in QEventDispatcherGlib::processEvents (this=0x9682238, flags={i = -1081291128}) at kernel/qeventdispatcher_glib.cpp:323
#24 0xb62743f5 in QGuiEventDispatcherGlib::processEvents (this=0x9682238, flags={i = -1081291080}) at kernel/qguieventdispatcher_glib.cpp:202
#25 0xb5d0006a in QEventLoop::processEvents (this=0xbf8ccf30, flags={i = -1081291016}) at kernel/qeventloop.cpp:149
#26 0xb5d004aa in QEventLoop::exec (this=0xbf8ccf30, flags={i = -1081290952}) at kernel/qeventloop.cpp:200
#27 0xb5d02959 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:880
#28 0xb61d2da7 in QApplication::exec () at kernel/qapplication.cpp:3553
#29 0x0804c072 in main (argc=1, argv=0xbf8cd2b4) at /build/buildd/kdepim-4.2.2/kontact/src/main.cpp:218

Is there anything I can do about it?
I've searched for some info all over the web, and there were some advices about such things in KDE3.x, but none was useful.
Comment 1 Frank Osterfeld 2009-05-14 12:22:23 UTC
Check for "Archive Backend" in ~/.kde/share/config/akregatorrc and delete the entry if it exists (I expect it to be empty).
Comment 2 Bitta Jam 2009-05-14 12:28:53 UTC
(In reply to comment #1)
> Check for "Archive Backend" in ~/.kde/share/config/akregatorrc and delete the
> entry if it exists (I expect it to be empty).

Thank you. It helped!
Comment 3 Frank Osterfeld 2009-05-14 21:49:19 UTC
SVN commit 968044 by osterfeld:

don't crash if the "Archive Backend" config string is empty
simplify code storing the factory key in item data instead of keeping indexes in a separate hash

BUG:191577


 M  +29 -30    settings_advanced.cpp  
 M  +1 -2      settings_advanced.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=968044
Comment 4 Bitta Jam 2009-05-14 22:06:55 UTC
(In reply to comment #3)
> SVN commit 968044 by osterfeld:

that's great.
thanks again!
Comment 5 Frank Osterfeld 2009-05-21 19:15:01 UTC
SVN commit 971106 by osterfeld:

forwardport:

don't crash if the "Archive Backend" config string is empty
simplify code storing the factory key in item data instead of keeping indexes in a separate hash

CCBUG:191577

 M  +29 -30    settings_advanced.cpp  
 M  +1 -2      settings_advanced.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=971106