don't crash if the "Archive Backend" config string is empty simplify code storing the factory key in item data instead of keeping indexes in a separate hash

BUG:191577

svn path=/branches/KDE/4.2/kdepim/; revision=968044